tests/reference/asr-test_ord-316ce61.stderr
semantic error: ord() is only supported for `str` of length 1
 --> tests/errors/test_ord.py:3:13
  |
3 |     i = ord('ab')
  |             ^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
